# digital-cookbook

./: .gitignore  LICENSE  README.md
ansible/compose-deploy/: .gitignore  README.md  ansible.cfg  deploy.yml
distributed-config/: README.md  docker-compose.yml
distributed-config/scripts/: consul-demo.sh  etcd-demo.sh  smoke.sh  vault-demo.sh  zookeeper-demo.sh
docker/rootless/: README.md  docker-compose.yml
go/orm-gorm-vs-jet/: .gitignore  Makefile  README.md  docker-compose.yml  go.mod  go.sum
nats/: README.md
nats/00-core/: README.md  docker-compose.yml
nats/01-jetstream/: README.md  docker-compose.yml
nats/02-cluster/: README.md  docker-compose.yml  nats-1.conf  nats-2.conf  nats-3.conf
nats/03-geo/: README.md  docker-compose.yml
nats/04-bench/: README.md  scenarios.md
nats/05-security/: .gitignore  README.md  docker-compose.yml  gen-certs.sh  mtls.conf  resolver.conf  static-accounts.conf
nats/06-observability/: README.md  docker-compose.yml  prometheus.yml
opensearch/cluster/: .gitignore  README.md  deploy.yml
performance/highload-lowlatency/: README.md
postgres/client-resilience/: .gitattributes  README.md
postgres/client-resilience/clients/rust/: Cargo.toml  Dockerfile
postgres/client-resilience/clients/rust/src/: main.rs
proxmox/terraform-vm-automation/: .gitignore  .terraform.lock.hcl  README.md  ct.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf  vm-clone.tf  vm-import.tf
redis/client-resilience/clients/rust/: Cargo.toml  Dockerfile
redis/client-resilience/clients/rust/src/: main.rs
(+143 files in other folders)
